--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,9 +1,9 @@
 $hero: #F94851;
-$accent: #FFB76E;
-$hover: #FF9E3C;
+$accent: #ec8547;
+$hover: #ff7122;
 $bg: #F6EDE1;
 $bgAccent: #F5CFCA;
-$txtGrey: #4b4b4b;
+$txtGrey: #353535;
 $txtBlack: #141517;
 
 @mixin serifHeader {
